# challenges

./: README.md  pyproject.toml
challenges/: asgi.py  settings.py  urls.py  wsgi.py
github/: models.py
trials/: apps.py  models.py
trials/migrations/: 0001_initial.py
