[tool.poetry]
name = "challenges"
version = "0.1.0"
description = ""
authors = ["Victor Neo <icyisamu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
